--- a/_server/app/partials/_vars.jade
+++ b/_server/app/partials/_vars.jade
@@ -1,4 +1,4 @@
 include ../../../setup/client
 include ../../../setup/sections
-include ../../../setup/scripts
+include ../../../setup/assets
 include ../../../setup/webfonts
