Better patterns HTML

--- a/_server/app/sections/ui/patterns.jade
+++ b/_server/app/sections/ui/patterns.jade
@@ -5,13 +5,16 @@ block header
 
 block content
   article.messaging
-    h2 Messages
+    header
+      h2 Messages
     include ../../widgets/_messages
 
   article.buttons
-    h2 Buttons
+    header
+      h2 Buttons
     include ../../widgets/_buttons
 
   article.pagers
-    h2 pagers
+    header
+      h2 Pagers
     include ../../widgets/_pagers
