--- a/_server/app/setup/assets.jade
+++ b/_server/app/setup/assets.jade
@@ -1,7 +1,7 @@
 //- Additional CSS files you'd like to include on all pages.
 //-
 //- If you would like to include CSS on a specific page, add an 'append stylesheets' block with the styling or links you'd like to include.
-- var css = ["/components/flexslider/flexslider.css"]
+- var css = ["/components/formalize/assets/css/formalize.css"]
 
 //- Additional JavaScript files you'd like to include on all pages.
 //-
@@ -10,4 +10,4 @@
 //-
 //- If you would like to include JavaScript on a specific page, add an 'append scripts-head' block for JavaScript in the head, and an 'append-footer' block for JavaScript at the bottom of the document.
 - var scriptsHead = ["/components/modernizr/modernizr.js"]
-- var scriptsFooter = ["/components/jquery/jquery.min.js", "/components/flexslider/jquery.flexslider-min.js"]
+- var scriptsFooter = ["/components/jquery/jquery.min.js", "/components/formalize/assets/js/jquery.formalize.min.js"]
