--- a/_server/app/compass/style-guide/global/_base.scss
+++ b/_server/app/compass/style-guide/global/_base.scss
@@ -10,7 +10,7 @@
 // CSS Reset
 ////////////////////////
 // @import "compass/reset";
-// @import "normalize";
+@import "normalize";
 
 
 ////////////////////////
