--- a/_server/app/setup/client.jade
+++ b/_server/app/setup/client.jade
@@ -2,11 +2,11 @@
 //-   clientName - The name of your Client
 //-   clientLogo - The address to the client's logo image
 //-   version - The version of the Style Guide
-- var clientName = "NBCUniversal"
+- var clientName = "Client Name"
 - var clientLogo = false
 - var version = "1"
 - var language = "en"
 
 //- Author Information
 //-   The author of the style guide
-- var author = "Sam Richard"
+- var author = "Author Name"
