Added text for the Buttons, plus supporting code in Buttons widget

--- a/_server/app/setup/tile/tile.jade
+++ b/_server/app/setup/tile/tile.jade
@@ -13,4 +13,4 @@
 - var keywords = ['Default', 'Minimal', 'Nothing', 'Design Me!']
 
 //- A list of classes you'd like to use for the display buttons
-- var buttons = ['call-to-action', 'big-button', ['big-button', 'red']]
+- var buttons = {"Call to Action": 'call-to-action', "Big Button": 'big-button', "Warning Button": ['big-button', 'red']}
