--- a/_server/app/widgets/_buttons.jade
+++ b/_server/app/widgets/_buttons.jade
@@ -8,6 +8,6 @@ include ../setup/tile/tile
     }
 
   ul
-    each button, i in buttons
+    each button, name in buttons
       li
-        a(class=button, href="#") Button #{i}
+        a(class=button, href="#") #{name}
