Removed Typekit kit ID

--- a/_server/app/setup/webfonts.jade
+++ b/_server/app/setup/webfonts.jade
@@ -2,5 +2,5 @@
  //-  For Typekit, put in your Typekit Kit ID (uses advanced loading method)
  //-  For Google Fonts, copy in the the families from inside the brackets [] from the JavaScript tab.
  //-  Wrap your selection in "double quotes"
-- var typekitID = 'hsu4wwn'
+- var typekitID = false
 - var googleFonts = false
