Add secure if doesn't found any <script> tag
In future, please remember about that ;)

--- a/_server/app/layouts/_webfonts.jade
+++ b/_server/app/layouts/_webfonts.jade
@@ -23,5 +23,9 @@ mixin webfonts(id, type)
         wf.type = 'text/javascript';
         wf.async = 'true';
         var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
+        
+        // what if s is 'undefined'?
+        if (s && s.parentNode) {
+          s.parentNode.insertBefore(wf, s);
+        }
       })();
