--- a/sass/prototype.scss
+++ b/sass/prototype.scss
@@ -139,13 +139,26 @@ $black: #3c3c3c;
   letter-spacing: .1em;
   text-transform: uppercase;
 
-  color: $black;
   border-bottom: 1px solid rgba($black, .15);
 
   width: 100%;
   clear: both;
   margin: 2em 0;
   padding: 1em 0 .15em;
+
+  position: relative;
+
+  a {
+    color: $black;
+    text-decoration: none;
+
+    &:after {
+      display: inline-block;
+      font-size: .15em;
+      padding-left: .75em;
+      content: ' (link)';
+    }
+  }
 
   :first-of-type & {
     margin-top: 0;
