If no source, set full width for deeplink

--- a/sass/_style-prototype.scss
+++ b/sass/_style-prototype.scss
@@ -184,7 +184,18 @@ $StylePrototypeTransitionDuration: .2s;
 [data-sp-class="deeplink"] {
   position: relative;
   z-index: 5;
+
+  &:last-child {
+    padding-bottom: .5em;
+    width: 100%;
+    display: block;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    font-weight: bold;
+    border-bottom: 1px solid rgba($StylePrototypeBlack, .25);
+  }
 }
+
 
 //////////////////////////////
 // Nav
