--- a/components/base/content/elements/base--h2.html
+++ b/components/base/content/elements/base--h2.html
@@ -1,1 +1,8 @@
-<h2 class="base--h2">Level Two Heading</h2>
+<ul class="base--ul">
+  <li class="base--li">Apple</li>
+  <li class="base--li">Banana</li>
+  <li class="base--li">Pear</li>
+  <li class="base--li">Walnut</li>
+  <li class="base--li">Cranberry</li>
+  <li class="base--li">Mushroom</li>
+</ul>
